--- a/articles/container-instances/TOC.yml
+++ b/articles/container-instances/TOC.yml
@@ -13,6 +13,9 @@
       href: container-instances-quickstart-portal.md
     - name: 部署容器实例 - PowerShell
       href: container-instances-quickstart-powershell.md
+    - name: 部署容器实例 - ARM 模板
+      displayName: Resource Manager
+      href: container-instances-quickstart-template.md
 - name: 教程
   items:
     - name: 创建并部署容器映像
@@ -51,7 +54,9 @@
       href: container-instances-orchestrator-relationship.md
     - name: 安全注意事项
       href: container-instances-image-security.md
-- name: 操作方法指南
+    - name: 虚拟网络
+      href: container-instances-virtual-network-concepts.md
+- name: 操作指南
   items:
     - name: 部署
       items:
@@ -77,8 +82,6 @@
           href: container-instances-start-command.md
         - name: 执行命令 (exec)
           href: container-instances-exec.md
-        - name: 运行 Jenkins 生成作业
-          href: container-instances-jenkins.md
         - name: 使用托管标识（预览版）
           href: container-instances-managed-identity.md
         - name: 使用 GPU 资源（预览版）
@@ -115,7 +118,7 @@
           href: container-instances-get-logs.md
         - name: 使用 Azure Monitor 日志进行日志记录
           href: container-instances-log-analytics.md
-    - name: 故障排除
+    - name: 疑难解答
       items:
         - name: 排查常见问题
           href: container-instances-troubleshooting.md
@@ -153,7 +156,7 @@
       href: 'https://azure.microsoft.com/roadmap/'
     - name: 提供产品反馈
       href: 'https://feedback.azure.com/forums/602224-azure-container-instances'
-    - name: 堆栈溢出
+    - name: Stack Overflow
       href: 'https://stackoverflow.com/questions/tagged/azure-container-instances'
     - name: 视频
       href: 'https://azure.microsoft.com/resources/videos/index/?services=container-instances&sort=newest'
