--- a/articles/container-instances/index.yml
+++ b/articles/container-instances/index.yml
@@ -11,12 +11,12 @@ metadata:
   author: dlepow
   ms.author: danlep
   ms.date: 09/25/2019
-  ms.openlocfilehash: 4e7be5b6da633d370a2ccdce7331788f2fbe0440
-  ms.sourcegitcommit: 253d4c7ab41e4eb11cd9995190cd5536fcec5a3c
+  ms.openlocfilehash: 1503cad9c85f60b930f520cf24e0d772d7ffe1e7
+  ms.sourcegitcommit: 1895459d1c8a592f03326fcb037007b86e2fd22f
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 03/25/2020
-  ms.locfileid: "75445760"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82628923"
 landingContent:
 - title: 关于 Azure 容器实例
   linkLists:
@@ -36,6 +36,8 @@ landingContent:
       url: container-instances-quickstart.md
     - text: 部署容器实例 - 门户
       url: container-instances-quickstart-portal.md
+    - text: 部署容器实例 - ARM 模板
+      url: container-instances-quickstart-template.md
   - linkListType: learn
     links:
     - text: 通过 Azure 容器实例运行 Docker 容器
@@ -46,7 +48,7 @@ landingContent:
     links:
     - text: 部署容器组 - YAML
       url: container-instances-multi-container-yaml.md
-    - text: 部署容器组 - 模板
+    - text: 部署容器组 - ARM 模板
       url: container-instances-multi-container-group.md
 - title: 部署方案
   linkLists:
