--- a/articles/mysql/TOC.yml
+++ b/articles/mysql/TOC.yml
@@ -9,12 +9,19 @@
 - name: 快速入门
   expanded: true
   items:
-    - name: 创建 DB - 门户
-      href: quickstart-create-mysql-server-database-using-azure-portal.md
-    - name: 创建 DB - Azure CLI
-      href: quickstart-create-mysql-server-database-using-azure-cli.md
-    - name: 创建 DB - Azure CLI up 命令
-      href: quickstart-create-server-up-azure-cli.md
+    - name: 创建 DB
+      items:
+        - name: 创建 DB - 门户
+          href: quickstart-create-mysql-server-database-using-azure-portal.md
+        - name: 创建 DB - Azure CLI
+          href: quickstart-create-mysql-server-database-using-azure-cli.md
+        - name: 创建 DB - Azure CLI up 命令
+          href: quickstart-create-server-up-azure-cli.md
+        - name: 创建 DB - Azure PowerShell
+          href: quickstart-create-mysql-server-database-using-azure-powershell.md
+        - name: 创建 DB - ARM 模板
+          href: quickstart-create-mysql-server-database-using-arm-template.md
+          displayName: deploy azure resource manager template
     - name: 连接和查询
       items:
         - name: PHP
@@ -43,6 +50,8 @@
           href: tutorial-design-database-using-portal.md
         - name: Azure CLI
           href: tutorial-design-database-using-cli.md
+        - name: Azure PowerShell
+          href: tutorial-design-database-using-powershell.md
         - name: Azure 资源管理器模板
           href: tutorial-provision-mysql-server-using-Azure-Resource-Manager-templates.md
     - name: 2 - 创建 Web 应用
@@ -160,6 +169,8 @@
           href: howto-restore-server-portal.md
         - name: Azure CLI
           href: howto-restore-server-cli.md
+        - name: Azure PowerShell
+          href: howto-restore-server-powershell.md
     - name: 迁移数据库
       items:
         - name: 转储和还原
@@ -186,12 +197,16 @@
           href: howto-server-parameters.md
         - name: Azure CLI
           href: howto-configure-server-parameters-using-cli.md
+        - name: Azure PowerShell
+          href: howto-configure-server-parameters-using-powershell.md
     - name: 自动增长存储
       items:
         - name: Azure 门户
           href: howto-auto-grow-storage-portal.md
         - name: Azure CLI
           href: howto-auto-grow-storage-cli.md
+        - name: Azure PowerShell
+          href: howto-auto-grow-storage-powershell.md
     - name: 访问服务器日志
       items:
         - name: 慢查询日志
@@ -218,6 +233,8 @@
           href: howto-read-replicas-portal.md
         - name: 使用 Azure CLI、REST API 创建只读副本
           href: howto-read-replicas-cli.md
+        - name: 创建只读副本 - Azure PowerShell
+          href: howto-read-replicas-powershell.md
     - name: 疑难解答
       items:
         - name: 排查连接错误
@@ -250,6 +267,8 @@
           href: howto-data-encryption-portal.md
         - name: Azure CLI
           href: howto-data-encryption-cli.md
+        - name: 数据加密验证
+          href: howto-data-encryption-validation.md
     - name: Azure AD 集成
       items:
         - name: 配置 Azure AD 集成
@@ -264,6 +283,8 @@
           href: howto-restart-server-portal.md
         - name: Azure CLI
           href: howto-restart-server-cli.md
+        - name: Azure PowerShell
+          href: howto-restart-server-powershell.md
 - name: 参考
   items:
     - name: Azure CLI
@@ -284,7 +305,7 @@
       href: 'https://azure.microsoft.com/pricing/details/mysql/'
     - name: MSDN 论坛
       href: 'https://social.msdn.microsoft.com/Forums/en-US/home?forum=AzureDatabaseforMySQL'
-    - name: 堆栈溢出
+    - name: Stack Overflow
       href: 'https://stackoverflow.com/questions/tagged/azure-database-mysql'
     - name: 视频
       items:
