--- a/articles/virtual-desktop/index.yml
+++ b/articles/virtual-desktop/index.yml
@@ -11,12 +11,12 @@ metadata:
   author: Heidilohr
   ms.author: helohr
   ms.date: 03/06/2020
-  ms.openlocfilehash: f37b0cd68c62813dd4c642d9e45a20a91d08c31c
-  ms.sourcegitcommit: 253d4c7ab41e4eb11cd9995190cd5536fcec5a3c
+  ms.openlocfilehash: 2f00d7b0b1c0bdf78a4908e945dd0f8a890ded1b
+  ms.sourcegitcommit: 50ef5c2798da04cf746181fbfa3253fca366feaa
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 03/25/2020
-  ms.locfileid: "78898653"
+  ms.lasthandoff: 04/30/2020
+  ms.locfileid: "82611511"
 landingContent:
 - title: 关于 Windows 虚拟桌面
   linkLists:
@@ -24,18 +24,30 @@ landingContent:
     links:
     - text: 什么是 Windows 虚拟桌面？
       url: overview.md
-- title: 入门
+- title: Windows 虚拟桌面 2020 春季版入门
+  linkLists:
+  - linkListType: tutorial
+    links:
+    - text: 通过 Azure 市场创建主机池
+      url: create-host-pools-azure-marketplace.md
+    - text: 管理 Windows 虚拟桌面的应用组
+      url: manage-app-groups.md
+    - text: 创建主机池以验证服务更新
+      url: create-validation-host-pool.md
+    - text: 设置服务警报
+      url: set-up-service-alerts.md
+- title: Windows 虚拟桌面 2019 秋季版入门
   linkLists:
   - linkListType: tutorial
     links:
     - text: 在 Windows 虚拟桌面中创建租户
-      url: tenant-setup-azure-active-directory.md
+      url: ./virtual-desktop-fall-2019/tenant-setup-azure-active-directory.md
     - text: 通过 Azure 市场创建主机池
       url: create-host-pools-azure-marketplace.md
     - text: 管理 Windows 虚拟桌面的应用组
       url: manage-app-groups.md
     - text: 使用 PowerShell 创建服务主体和角色分配
-      url: create-service-principal-role-powershell.md
+      url: ./virtual-desktop-fall-2019/create-service-principal-role-powershell.md
 - title: 连接到 Windows 虚拟桌面
   linkLists:
   - linkListType: how-to-guide
