--- a/articles/active-directory/saas-apps/toc.yml
+++ b/articles/active-directory/saas-apps/toc.yml
@@ -413,6 +413,8 @@
           href: digicert-tutorial.md
         - name: 直接
           href: direct-tutorial.md
+        - name: Directions on Microsoft
+          href: directions-microsoft-tutorial.md
         - name: Discovery Benefits SSO
           href: discovery-benefits-sso-tutorial.md
         - name: Displayr
@@ -1005,6 +1007,8 @@
           href: myaryaka-tutorial.md
         - name: My Award Points Top Sub/Top Team
           href: myawardpoints-tutorial.md
+        - name: My IBISWorld
+          href: my-ibisworld-tutorial.md
         - name: myPolicies
           href: mypolicies-tutorial.md
         - name: MyVR
@@ -1177,6 +1181,8 @@
           href: predictixpricereporting-tutorial.md
         - name: PressPage
           href: presspage-tutorial.md
+        - name: Prezi
+          href: prezi-tutorial.md
         - name: Printix
           href: printix-tutorial.md
         - name: Prisma Cloud SSO
