--- a/articles/cosmos-db/TOC.yml
+++ b/articles/cosmos-db/TOC.yml
@@ -87,6 +87,9 @@
       href: cli-samples.md
     - name: Azure 资源管理器
       href: resource-manager-samples.md
+    - name: Azure Policy 内置策略定义
+      displayName: 'samples, policies, definitions'
+      href: ./policy-samples.md
 - name: 概念
   items:
     - name: NoSQL 数据库与关系数据库
@@ -1051,22 +1054,26 @@
       items:
         - name: 监视 Cosmos DB
           href: monitor-cosmos-db.md
-        - name: 监视服务器端延迟
-          href: monitor-server-side-latency.md
-        - name: 监视请求单位使用情况
-          href: monitor-request-unit-usage.md
-        - name: 使用诊断日志进行监视
-          href: cosmosdb-monitor-resource-logs.md
-        - name: 审核控制平面日志
-          href: audit-control-plane-logs.md
-        - name: 用于 Cosmos 的 Azure Monitor（预览版）
-          href: ../azure-monitor/insights/cosmosdb-insights-overview.md?toc=/azure/cosmos-db/toc.json&bc=/azure/cosmos-db/breadcrumb/toc.json
+        - name: 使用 Azure Monitor 指标
+          items:
+            - name: 用于 Cosmos 的 Azure Monitor（预览版）
+              href: ../azure-monitor/insights/cosmosdb-insights-overview.md?toc=/azure/cosmos-db/toc.json&bc=/azure/cosmos-db/breadcrumb/toc.json
+            - name: 监视服务器端延迟
+              href: monitor-server-side-latency.md
+            - name: 监视请求单位使用情况
+              href: monitor-request-unit-usage.md
+        - name: 使用诊断日志
+          items:
+            - name: 使用诊断日志进行监视
+              href: cosmosdb-monitor-resource-logs.md
+            - name: 审核控制平面日志
+              href: audit-control-plane-logs.md
         - name: 从 Cosmos DB 帐户中查看指标
           href: use-metrics.md
-        - name: 使用逻辑应用进行应用程序日志记录
-          href: ../logic-apps/logic-apps-scenario-error-and-exception-handling.md?toc=/azure/cosmos-db/toc.json&bc=/azure/cosmos-db/breadcrumb/toc.json
         - name: 监视数据参考
           href: monitor-cosmos-db-reference.md
+        - name: 使用逻辑应用进行应用程序日志记录
+          href: ../logic-apps/logic-apps-scenario-error-and-exception-handling.md?toc=/azure/cosmos-db/toc.json&bc=/azure/cosmos-db/breadcrumb/toc.json
     - name: 本地开发
       items:
         - name: 使用模拟器
