--- a/articles/event-grid/toc.yml
+++ b/articles/event-grid/toc.yml
@@ -149,6 +149,8 @@
           href: event-filtering.md
         - name: 传递和重试
           href: delivery-and-retry.md
+        - name: Webhook 事件传送
+          href: webhook-event-delivery.md
     - name: 灾难恢复
       items:
         - name: 异地灾难恢复
@@ -161,6 +163,12 @@
           href: security-authorization.md
         - name: 网络安全
           href: network-security.md
+    - name: 监视和故障排除
+      items:
+        - name: 诊断日志
+          href: null
+        - name: 指标
+          href: metrics.md
 - name: 操作指南
   items:
     - name: 配置专用终结点（预览版）
@@ -191,12 +199,16 @@
       href: how-to-event-domains.md
     - name: 实现客户端故障转移
       href: custom-disaster-recovery.md
+    - name: 跟踪异步 REST 操作
+      href: ../azure-resource-manager/management/async-operations.md?toc=%2fazure%2fevent-grid%2ftoc.json
     - name: 疑难解答
       items:
-        - name: 为主题启用诊断日志
+        - name: 启用诊断日志
           href: enable-diagnostic-logs-topic.md
         - name: 排查错误
           href: troubleshoot-errors.md
+        - name: 排查订阅验证问题
+          href: troubleshoot-subscription-validation.md
         - name: 监视事件传送
           href: monitor-event-delivery.md
 - name: 参考
@@ -235,5 +247,5 @@
       href: 'https://azure.microsoft.com/pricing/details/event-grid/'
     - name: 定价计算器
       href: 'https://azure.microsoft.com/pricing/calculator/'
-    - name: 堆栈溢出
+    - name: Stack Overflow
       href: 'https://stackoverflow.com/questions/tagged/azure-eventgrid'
