--- a/articles/logic-apps/toc.yml
+++ b/articles/logic-apps/toc.yml
@@ -27,6 +27,9 @@
       href: 'https://docs.microsoft.com/samples/browse/?products=azure-logic-apps'
     - name: 资源管理器快速启动模板
       href: 'https://azure.microsoft.com/resources/templates/?resourceType=Microsoft.Logic'
+    - name: Azure Policy 内置策略定义
+      displayName: 'samples, policies, definitions'
+      href: ./policy-samples.md
 - name: 概念
   items:
     - name: 适用于逻辑应用的连接器
@@ -205,8 +208,6 @@
           href: ../connectors/connectors-create-api-box.md
         - name: 自定义 API 和 Web 应用
           href: logic-apps-create-api-app.md
-        - name: DB2
-          href: ../connectors/connectors-create-api-db2.md
         - name: 延迟
           href: ../connectors/connectors-native-delay.md
         - name: Dropbox
@@ -237,8 +238,12 @@
           href: ../connectors/connectors-native-webhook.md
         - name: IBM 3270
           href: ../connectors/connectors-run-3270-apps-ibm-mainframe-create-api-3270.md
-        - name: Informix
+        - name: IBM DB2
+          href: ../connectors/connectors-create-api-db2.md
+        - name: IBM Informix
           href: ../connectors/connectors-create-api-informix.md
+        - name: IBM MQ
+          href: ../connectors/connectors-create-api-mq.md
         - name: 集成帐户
           href: logic-apps-enterprise-integration-metadata.md
         - name: MailChimp
@@ -247,8 +252,6 @@
           href: ../connectors/connectors-integrate-security-operations-create-api-microsoft-graph-security.md
         - name: Microsoft Translator
           href: ../connectors/connectors-create-api-microsofttranslator.md
-        - name: MQ
-          href: ../connectors/connectors-create-api-mq.md
         - name: Office 365 Outlook
           href: ../connectors/connectors-create-api-office365-outlook.md
         - name: Office 365 用户
