--- a/articles/security/benchmarks/index.yml
+++ b/articles/security/benchmarks/index.yml
@@ -3,22 +3,22 @@ title: Azure 安全基准文档
 summary: 了解如何通过我们的最佳做法和指导来保护 Azure 上的云解决方案。
 metadata:
   title: Azure 安全基准
-  description: Azure 安全控制基准包含的建议可帮助你改进 Azure 上的应用程序和数据的安全性。
+  description: Azure 安全基准包含的建议可帮助你提高 Azure 上的应用程序和数据的安全性。
   services: security
   ms.service: security
   ms.subservice: fundamentals
-  ms.custom: security-baselines
+  ms.custom: security-benchmark
   ms.topic: landing-page
   author: msmbaldwin
   ms.author: mbaldwin
   manager: rkarlin
   ms.date: 12/23/2019
-  ms.openlocfilehash: c2b36e098314af78ca3d6f28534c3d3e97697363
-  ms.sourcegitcommit: d6e4eebf663df8adf8efe07deabdc3586616d1e4
+  ms.openlocfilehash: 7cebc4fb6e676470b46a52cf1ea62e0990e708e9
+  ms.sourcegitcommit: 50ef5c2798da04cf746181fbfa3253fca366feaa
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 04/15/2020
-  ms.locfileid: "81393844"
+  ms.lasthandoff: 04/30/2020
+  ms.locfileid: "82607736"
 landingContent:
 - title: 关于 Azure 安全基准
   linkLists:
@@ -28,7 +28,7 @@ landingContent:
       url: introduction.md
     - text: Azure 安全控制概述
       url: overview.md
-- title: 安全控制
+- title: 安全控件
   linkLists:
   - linkListType: overview
     links:
