--- a/articles/storage/blobs/TOC.yml
+++ b/articles/storage/blobs/TOC.yml
@@ -175,8 +175,10 @@
               href: ../common/storage-plan-manage-costs.md
         - name: 并发
           href: ../common/storage-concurrency.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-        - name: 搜索和了解 Blob 数据
+        - name: 查找、搜索和了解 Blob 数据
           items:
+            - name: 使用 Blob 索引管理和查找 Blob 数据
+              href: storage-manage-find-blobs.md
             - name: 使用 AI 了解 Blob 数据
               href: ../../search/search-blob-ai-integration.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
             - name: 用于 Blob 数据的全文搜索
@@ -227,26 +229,22 @@
                   items:
                     - name: 准备用于导入的驱动器 (v1)
                     - name: 准备用于导入的驱动器 (v2)
-        - name: 监视和故障排除
+        - name: 监视
           items:
-            - name: 故障排除教程
-              href: ../common/storage-e2e-troubleshooting.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-            - name: 监视、诊断和故障排除
-              href: ../common/storage-monitoring-diagnosing-troubleshooting.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-            - name: 在 Azure 门户中进行监视
-              href: ../common/storage-monitor-storage-account.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-            - name: 指标和日志记录
+            - name: 监视存储帐户
+              href: ../common/monitor-storage.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
+            - name: 从经典指标迁移
+              href: ../common/storage-metrics-migration.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
+            - name: 监视（经典）
               items:
-                - name: Azure Monitor 中的指标
-                  href: ../common/storage-metrics-in-azure-monitor.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-                - name: 迁移到新指标
-                  href: ../common/storage-metrics-migration.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
                 - name: 存储分析
                   href: ../common/storage-analytics.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-                - name: 存储分析指标（经典）
+                - name: 指标
                   href: ../common/storage-analytics-metrics.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-                - name: 存储分析日志
+                - name: 日志
                   href: ../common/storage-analytics-logging.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
+                - name: 监视、诊断和故障排除
+                  href: ../common/storage-monitoring-diagnosing-troubleshooting.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
         - name: 事件处理
           href: storage-blob-event-overview.md
         - name: 更改源
@@ -398,6 +396,8 @@
           href: storage-custom-domain-name.md
         - name: 将事件路由到自定义终结点
           href: storage-blob-event-quickstart.md
+        - name: 利用 Blob 索引
+          href: storage-blob-index-how-to.md
         - name: 处理更改源日志
           href: storage-blob-change-feed-how-to.md
         - name: 传输数据
@@ -434,6 +434,12 @@
               href: storage-xamarin-blob-storage.md
         - name: 跨区域移动
           href: ../common/storage-account-move.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
+        - name: 监视（经典）
+          items:
+            - name: 在 Azure 门户中进行监视（经典）
+              href: ../common/storage-monitor-storage-account.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
+            - name: 故障排除教程（经典）
+              href: ../common/storage-e2e-troubleshooting.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
         - name: 疑难解答
           items:
             - name: 延迟问题
@@ -533,6 +539,8 @@
         - name: 资源管理器模板
           displayName: ARM
           href: /azure/templates/microsoft.storage/allversions
+        - name: 监视数据
+          href: ../common/monitor-storage-reference.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
     - name: 资源
       items:
         - name: Azure 更新
@@ -616,74 +624,43 @@
     - name: 概述
       items:
         - name: Data Lake Storage 简介
-          href: ../blobs/data-lake-storage-introduction.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
+          href: data-lake-storage-introduction.md
     - name: 快速入门
       items:
         - name: 使用 Databricks 分析数据
-          href: ../blobs/data-lake-storage-quickstart-create-databricks-account.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
+          href: data-lake-storage-quickstart-create-databricks-account.md
     - name: 教程
       items:
         - name: 使用 Azure Databricks 提取、转换和加载数据
           href: ../../azure-databricks/databricks-extract-load-sql-data-warehouse.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
         - name: 使用 Spark 通过 Databricks 访问 Data Lake Storage 数据
-          href: ../blobs/data-lake-storage-use-databricks-spark.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
+          href: data-lake-storage-use-databricks-spark.md
         - name: 在 Azure HDInsight 上使用 Apache Hive 提取、转换和加载数据
-          href: ../blobs/data-lake-storage-tutorial-extract-transform-load-hive.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
+          href: data-lake-storage-tutorial-extract-transform-load-hive.md
         - name: 使用事件网格将数据插入 Databricks Delta 表中
-          href: ../blobs/data-lake-storage-events.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-    - name: 示例
-      items:
-        - name: .NET
-          href: ../common/storage-samples-dotnet.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-        - name: Java
-          href: ../common/storage-samples-java.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-        - name: Python
-          href: ../common/storage-samples-python.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-        - name: JavaScript
-          href: ../common/storage-samples-javascript.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
+          href: data-lake-storage-events.md
     - name: 概念
       items:
         - name: 处理大数据
-          href: ../blobs/data-lake-storage-data-scenarios.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-        - name: 与 Azure 服务集成
-          href: ../blobs/data-lake-storage-integrate-with-azure-services.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-        - name: 使用“查询加速”筛选数据
-          href: data-lake-storage-query-acceleration.md
-        - name: 适用于 Hadoop 的 Azure Blob 文件系统驱动程序
-          href: ../blobs/data-lake-storage-abfs-driver.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-        - name: Azure Blob 文件系统 URI
-          href: ../blobs/data-lake-storage-introduction-abfs-uri.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-        - name: 关于分层命名空间
-          href: ../blobs/data-lake-storage-namespace.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-        - name: 关于存储帐户
-          href: ../common/storage-account-overview.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
+          href: data-lake-storage-data-scenarios.md
         - name: 最佳做法
           href: data-lake-storage-best-practices.md
-        - name: 数据冗余
-          href: ../common/storage-redundancy.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-        - name: 数据传输解决方案
-          href: ../common/storage-choose-data-transfer-solution.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-        - name: 并发
-          href: ../common/storage-concurrency.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
+        - name: 查询加速
+          href: data-lake-storage-query-acceleration.md
+        - name: 体系结构
+          items:
+            - name: 适用于 Hadoop 的 Azure Blob 文件系统驱动程序
+              href: data-lake-storage-abfs-driver.md
+            - name: Azure Blob 文件系统 URI
+              href: data-lake-storage-introduction-abfs-uri.md
+            - name: 关于分层命名空间
+              href: data-lake-storage-namespace.md
         - name: 安全性
           items:
-            - name: 授权数据操作
-              href: ../common/storage-auth.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-            - name: 授权管理操作
-              href: ../common/authorization-resource-provider.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
+            - name: 安全建议
+              href: security-recommendations.md
             - name: 访问控制（目录和文件）
               href: data-lake-storage-access-control.md
-            - name: Azure 存储静态加密
-              href: ../common/storage-service-encryption.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-              items:
-                - name: 客户管理的密钥和 Azure Key Vault
-                  href: ../common/encryption-customer-managed-keys.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-                - name: 请求中客户提供的密钥
-                  href: ../common/encryption-customer-provided-keys.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-            - name: 高级威胁防护
-              href: ../common/storage-advanced-threat-protection.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-            - name: 使用 Azure 专用终结点
-              href: ../common/storage-private-endpoints.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
         - name: 兼容性
           items:
             - name: 多协议访问
@@ -713,73 +690,9 @@
         - name: 迁移
           items:
             - name: 从 Data Lake Storage Gen1 迁移
-              href: ../blobs/data-lake-storage-migrate-gen1-to-gen2.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.jso
+              href: data-lake-storage-migrate-gen1-to-gen2.md
             - name: 迁移本地 HDFS 存储
-              href: ../blobs/data-lake-storage-migrate-on-premises-HDFS-cluster.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-        - name: 安全
-          items:
-            - name: 授权访问数据
-              items:
-                - name: 用户的授权选项
-                  items:
-                    - name: 门户
-                      href: ../common/storage-access-blobs-queues-portal.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-                    - name: PowerShell
-                      href: ../common/authorize-active-directory-powershell.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-                    - name: Azure CLI
-                      href: ../common/authorize-active-directory-cli.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-                - name: 使用 RBAC 管理访问权限
-                  items:
-                    - name: 门户
-                      href: ../common/storage-auth-aad-rbac-portal.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-                    - name: PowerShell
-                      href: ../common/storage-auth-aad-rbac-powershell.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-                    - name: Azure CLI
-                      href: ../common/storage-auth-aad-rbac-cli.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-                - name: 通过 Azure AD 进行身份验证和授权
-                  items:
-                    - name: 通过托管标识授权
-                      href: ../common/storage-auth-aad-msi.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-                    - name: 从应用程序授权
-                      href: ../common/storage-auth-aad-app.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-                - name: 通过共享密钥进行授权
-                  items:
-                    - name: 查看和管理帐户密钥
-                      href: ../common/storage-account-keys-manage.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-                    - name: 配置连接字符串
-                      href: ../common/storage-configure-connection-string.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-                    - name: 使用 Azure 存储 REST API
-                      href: ../common/storage-rest-api-auth.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-            - name: 管理 Azure 存储加密
-              items:
-                - name: 管理存储帐户的加密密钥
-                  items:
-                    - name: 检查帐户的加密密钥模型
-                      href: ../common/storage-encryption-key-model-get.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-                    - name: 配置客户管理的加密密钥
-                      items:
-                        - name: 门户
-                          href: ../common/storage-encryption-keys-portal.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-                        - name: PowerShell
-                          href: ../common/storage-encryption-keys-powershell.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-                        - name: Azure CLI
-                          href: ../common/storage-encryption-keys-cli.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-            - name: 配置客户端加密
-              items:
-                - name: .NET
-                  href: ../common/storage-client-side-encryption.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-                - name: Java
-                  href: ../common/storage-client-side-encryption-java.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-                - name: Python
-                  href: ../common/storage-client-side-encryption-python.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-            - name: 配置网络安全
-              items:
-                - name: 需要安全传输
-                  href: ../common/storage-require-secure-transfer.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-                - name: 配置防火墙和虚拟网络
-                  href: ../common/storage-network-security.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-                - name: 启用传输层安全性
-                  href: ../common/storage-security-tls.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
+              href: data-lake-storage-migrate-on-premises-HDFS-cluster.md
         - name: 管理
           items:
             - name: .NET
@@ -797,7 +710,7 @@
             - name: 存储资源管理器
               href: data-lake-storage-explorer.md
             - name: Hadoop 文件系统 CLI
-              href: ../blobs/data-lake-storage-use-hdfs-data-lake-storage.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
+              href: data-lake-storage-use-hdfs-data-lake-storage.md
         - name: 查询
           items:
             - name: 使用“查询加速”筛选数据
@@ -819,25 +732,15 @@
         - name: 优化
           items:
             - name: 优化性能
-              href: ../blobs/data-lake-storage-performance-tuning-guidance.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
+              href: data-lake-storage-performance-tuning-guidance.md
             - name: 优化 HDInsight 上的 Spark
-              href: ../blobs/data-lake-storage-performance-tuning-spark.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
+              href: data-lake-storage-performance-tuning-spark.md
             - name: 优化 HDInsight 上的 Hive
-              href: ../blobs/data-lake-storage-performance-tuning-hive.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
+              href: data-lake-storage-performance-tuning-hive.md
             - name: 优化 HDInsight 上的 MapReduce
-              href: ../blobs/data-lake-storage-performance-tuning-mapreduce.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
+              href: data-lake-storage-performance-tuning-mapreduce.md
             - name: 优化 HDInsight 上的 Storm
-              href: ../blobs/data-lake-storage-performance-tuning-storm.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-        - name: 恢复
-          items:
-            - name: 检查“上次同步时间”属性
-              href: ../common/last-sync-time-get.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-        - name: 模拟
-          items:
-            - name: 使用 Azurite 开放源代码模拟器
-              href: ../common/storage-use-azurite.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-            - name: 使用 Azure 存储模拟器
-              href: ../common/storage-use-emulator.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
+              href: data-lake-storage-performance-tuning-storm.md
     - name: 参考
       items:
         - name: .NET
@@ -850,7 +753,7 @@
           href: 'https://www.npmjs.com/package/@azure/storage-file-datalake/v/12.0.0-preview.6'
         - name: REST
           href: /rest/api/storageservices/data-lake-storage-gen2
-        - name: 查询加速
+        - name: 查询加速参考
           href: query-acceleration-sql-reference.md
         - name: AzCopy v10
           items:
