--- a/articles/cognitive-services/Speech-Service/toc.yml
+++ b/articles/cognitive-services/Speech-Service/toc.yml
@@ -426,6 +426,8 @@
               href: faq-voice-assistants.md
     - name: 自定义关键字
       items:
+        - name: 自定义关键字概述
+          href: custom-keyword-overview.md
         - name: 自定义关键字命名准则
           href: speech-devices-sdk-kws-guidelines.md
         - name: 自定义关键字发现
@@ -519,6 +521,10 @@
           href: speech-devices-sdk-roobo-v1.md
         - name: Roobo v2 详细信息
           href: speech-devices-sdk-roobo-v2.md
+    - name: 操作指南
+      items:
+        - name: 如何配置麦克风阵列
+          href: how-to-devices-microphone-array-configuration.md
     - name: 快速入门
       items:
         - name: 使用语音设备 SDK
