--- a/articles/azure-app-configuration/TOC.yml
+++ b/articles/azure-app-configuration/TOC.yml
@@ -56,6 +56,8 @@
       href: use-key-vault-references-spring-boot.md
     - name: 与 CI/CD 管道集成
       href: integrate-ci-cd-pipeline.md
+    - name: 使用 Helm 与 Kubernetes 部署集成
+      href: integrate-kubernetes-deployment-helm.md
 - name: 示例
   items:
     - name: Azure CLI
