--- a/articles/load-balancer/TOC.yml
+++ b/articles/load-balancer/TOC.yml
@@ -4,6 +4,8 @@
   items:
     - name: 什么是 Azure 负载均衡器？
       href: load-balancer-overview.md
+    - name: 常见问题
+      href: load-balancer-faqs.md
 - name: 快速入门
   items:
     - name: 创建负载均衡器 - 门户
